--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "dependencies": {
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
+        "bcryptjs": "^2.4.3",
         "bluebird": "^3.7.2",
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.12",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "nodemon": "^2.0.3"
     }
 }
