--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "fs-extra": "^9.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.12",
         "multer": "^1.4.2",
