--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
         "express": "^4.17.1",
         "fs-extra": "^9.0.0",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.27.0",
         "mongoose": "^5.9.12",
         "multer": "^1.4.2",
-        "nodemon": "^2.0.3"
+        "nodemailer": "^6.4.8",
+        "nodemon": "^2.0.3",
+        "telegraf": "^3.38.0"
     }
 }
